--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,14 @@
 p {
-	font-family: Verdana;
+	font-family: 'Raleway' , arial;
 	color: blue;
 	font-size: 30;
+}
+
+h1{
+	font-family: 'Baloo Bhaina', cursive;
+	font-size: 50;
+	background-color: #33FBC9;
+	border : 2px solid ;
+	padding: 10px;
+
 }
